tests/baselines/reference/asyncArrowFunction5_es5.errors.txt
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,11): error TS2552: Cannot find name 'async'. Did you mean 'NaN'?
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,18): error TS2552: Cannot find name 'await'. Did you mean 'Math'?
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,24): error TS1005: ',' expected.
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,26): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Promise' must be of type 'PromiseConstructor', but here has type 'void'.
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,33): error TS1005: '=' expected.
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts(1,40): error TS1109: Expression expected.


==== tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction5_es5.ts (6 errors) ====
    var foo = async (await): Promise<void> => {
              ~~~~~
!!! error TS2552: Cannot find name 'async'. Did you mean 'NaN'?
                     ~~~~~
!!! error TS2552: Cannot find name 'await'. Did you mean 'Math'?
                           ~
!!! error TS1005: ',' expected.
                             ~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Promise' must be of type 'PromiseConstructor', but here has type 'void'.
                                    ~
!!! error TS1005: '=' expected.
                                           ~~
!!! error TS1109: Expression expected.
    }